chore: Fix code snippet line highlighting in dark mode

--- a/src/components/CodeSnippet.module.scss
+++ b/src/components/CodeSnippet.module.scss
@@ -30,6 +30,10 @@
 
 .highlight {
   background: var(--color-neutrals-300);
+
+  :global(.dark-mode) & {
+    background: var(--color-dark-100);
+  }
 }
 
 .bottomBar {
